--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "PA",
   "start_url": "",
   "display": "standalone",
-  "background_color": "#E8967D",
-  "theme_color": "#FEDD6E",
+  "background_color": "#F8F7DA",
+  "theme_color": "#8C383A",
   "description": "PWA realized with Vite.js, React.js and React Router",
   "icons": [
       {
